--- a/docs/valex.cc/package.json
+++ b/docs/valex.cc/package.json
@@ -2,8 +2,8 @@
   "name": "valex.cc",
   "version": "2.0.0",
   "private": true,
-  "description": "The [website](https://valex.cc) for [Electron](https://github.com/electron/electron).",
-  "repository": "https://github.com/electron/valex.cc",
+  "description": "The [website](https://valex.cc) for [Valex](https://github.com/valex/valex).",
+  "repository": "https://github.com/valex/valex.cc",
   "homepage": "https://valex.cc",
   "author": "GitHub",
   "license": "MIT",
@@ -35,7 +35,7 @@
     "dotenv": "^4.0.0",
     "electron-apps": "1.1985.0",
     "electron-i18n": "^0.20.0",
-    "electron-userland-reports": "1.6.0",
+    "valex-userland-reports": "1.6.0",
     "express": "^4.16.2",
     "express-hbs": "^1.0.4",
     "express-request-language": "^1.1.15",
